# rosified_mecanum_wheeled_robot

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/mecanum_msgs/: Imu.h  PID.h  Velocities.h
devel/include/mecanum_pid/: mecanumPIDConfig.h
devel/lib/imu_calib/: apply_calib  do_calib
devel/lib/mecanum_pid/: pid_configure  pid_listen
devel/lib/mecanumrobot_mrm/: mecanum_base_node
devel/lib/pkgconfig/: imu_calib.pc  mecanum_msgs.pc  mecanum_pid.pc  mecanumrobot_mrm.pc
devel/lib/python2.7/dist-packages/mecanum_msgs/msg/: _Imu.py  _PID.py  _Velocities.py
devel/lib/python2.7/dist-packages/mecanum_pid/cfg/: mecanumPIDConfig.py
devel/share/common-lisp/ros/mecanum_msgs/msg/: Imu.lisp  PID.lisp  Velocities.lisp  _package.lisp  _package_Imu.lisp  _package_PID.lisp  _package_Velocities.lisp  mecanum_msgs-msg.asd
devel/share/gennodejs/ros/mecanum_msgs/msg/: Imu.js  PID.js  Velocities.js
devel/share/imu_calib/cmake/: imu_calibConfig.cmake
devel/share/mecanum_msgs/cmake/: mecanum_msgs-msg-extras.cmake  mecanum_msgs-msg-paths.cmake  mecanum_msgsConfig.cmake
devel/share/mecanum_pid/cmake/: mecanum_pid-msg-extras.cmake  mecanum_pid-msg-paths.cmake  mecanum_pidConfig.cmake
devel/share/mecanum_pid/docs/: mecanumPIDConfig-usage.dox
devel/share/mecanumrobot_mrm/cmake/: mecanumrobot_mrmConfig.cmake
devel/share/roseus/ros/mecanum_msgs/: manifest.l
devel/share/roseus/ros/mecanum_msgs/msg/: Imu.l  PID.l  Velocities.l
devel/share/roseus/ros/mecanum_pid/: manifest.l
src/imu_calib/: CMakeLists.txt  package.xml
src/imu_calib/include/imu_calib/: apply_calib.h  do_calib.h
src/imu_calib/src/: apply_calib.cpp  do_calib.cpp
src/mecanum_msgs/: CMakeLists.txt
src/mecanum_msgs/msg/: PID.msg
src/mecanum_pid/: CMakeLists.txt  README.md  package.xml
src/mecanum_pid/cfg/: mecanumPID.cfg
src/mecanum_pid/include/mecanum_pid/: mecanum_pid_core.h
src/mecanum_pid/src/: mecanum_pid_core.cpp  pid_configure.cpp  pid_listen.cpp
src/mecanum_udev/: CMakeLists.txt  README.md  package.xml
src/mecanum_udev/scripts/: mecanum_udev.py
src/mecanumrobot_mrm/: CMakeLists.txt
src/mecanumrobot_mrm/include/: mecanum_base.h
src/mecanumrobot_mrm/launch/: bringup.launch  minimal.launch  navigate.launch  slam.launch
src/mecanumrobot_mrm/launch/include/: laser.launch
src/mecanumrobot_mrm/launch/include/imu/: imu.launch
src/mecanumrobot_mrm/launch/include/lidar/: rplidar.launch
src/mecanumrobot_mrm/launch/include/move_base/: move_base_mecanum.launch
src/mecanumrobot_mrm/maps/: floormapbig2.pgm  floormapbig2.yaml
src/mecanumrobot_mrm/param/ekf/: robot_localization.yaml
src/mecanumrobot_mrm/param/imu/: imu_calib.yaml  imu_calib0.yaml
src/mecanumrobot_mrm/param/navigation/: base_local_planner_holonomic_params.yaml  costmap_commom_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/mecanumrobot_mrm/src/: mecanum_base.cpp  mecanum_base_node.cpp
src/mecanumrobot_mrm/teensy/firmware/: platformio.ini
src/mecanumrobot_mrm/teensy/firmware/lib/config/: mecanum_base_config.h
src/mecanumrobot_mrm/teensy/firmware/lib/encoder/: Encoder.cpp  Encoder.h  keywords.txt
src/mecanumrobot_mrm/teensy/firmware/lib/encoder/utility/: direct_pin_read.h
src/mecanumrobot_mrm/teensy/firmware/lib/motor/: Motor.cpp  Motor.h
src/mecanumrobot_mrm/teensy/firmware/lib/ros_lib/mecanum_msgs/: Imu.h  PID.h  Velocities.h
src/mecanumrobot_mrm/teensy/firmware/src/: firmware.ino
src/mecanumrobot_mrm/visualization/: visualization.rviz
