<?xml version="1.0"?>
<package format="2">
  <name>mecanum_pid</name>
  <version>0.0.0</version>
  <description>The mecanum_pid package</description>

  <maintainer email="mohtashemreyazmakhdoomi@gmail.com">Mohatashem</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>mecanum_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>mecanum_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>mecanum_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>


  </export>
</package>
