<?xml version="1.0"?>
<package format="2">
  <name>mecanum_udev</name>
  <version>0.0.1</version>
  <description>The mecanum_udev package</description>

 
  <maintainer email="mohtashemreyazmakhdoomi@gmail.com">Mohatashem</maintainer>
  <license>BSD</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>



  <export>


  </export>
</package>
